<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2026, Oracle and/or its affiliates.
Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.ai</groupId>
        <artifactId>spring-ai-parent</artifactId>
        <version>2.0.1</version>
        <relativePath/>
    </parent>

    <groupId>com.oracle.spring.ai</groupId>
    <artifactId>spring-ai-oracle-parent</artifactId>
    <version>2.0.1</version>
    <packaging>pom</packaging>

    <name>Spring AI Oracle</name>
    <description>Spring AI integrations for Oracle AI services</description>
    <url>https://github.com/oracle/spring-cloud-oracle</url>

    <organization>
        <name>Oracle America, Inc.</name>
        <url>https://www.oracle.com</url>
    </organization>

    <developers>
        <developer>
            <name>Oracle</name>
            <email>obaas_ww at oracle.com</email>
            <organization>Oracle America, Inc.</organization>
            <organizationUrl>https://www.oracle.com</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Universal Permissive License (UPL), Version 1.0</name>
            <url>https://oss.oracle.com/licenses/upl/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/oracle/spring-cloud-oracle</url>
        <connection>scm:git:https://github.com/oracle/spring-cloud-oracle.git</connection>
        <developerConnection>scm:git:git@github.com:oracle/spring-cloud-oracle.git</developerConnection>
    </scm>

    <modules>
        <module>models/spring-ai-oracle</module>
        <module>auto-configurations/models/spring-ai-autoconfigure-model-oracle</module>
        <module>starters/spring-ai-starter-model-oracle</module>
    </modules>

    <properties>
        <cyclonedx.version>2.9.2</cyclonedx.version>
        <spotbugs-maven-plugin.version>4.10.4.0</spotbugs-maven-plugin.version>
        <findsecbugs-plugin.version>1.14.0</findsecbugs-plugin.version>
        <spotbugs-annotations.version>4.10.4</spotbugs-annotations.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <spring-boot.version>4.1.1</spring-boot.version>
        <jackson.version>3.1.5</jackson.version>
        <oci-sdk.version>3.89.1</oci-sdk.version>

        <!-- Distribution management -->
        <repository.id>artifactory</repository.id>
        <repository.name>spring-cloud-oci-releases</repository.name>
        <repository.url>changeme</repository.url>
    </properties>

    <dependencyManagement>
        <dependencies>
<!--            Remove once transitive dependencies update-->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.21.5</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.oci.sdk</groupId>
                <artifactId>oci-java-sdk-bom</artifactId>
                <version>${oci-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.oracle.spring.ai</groupId>
                <artifactId>spring-ai-oracle</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.spring.ai</groupId>
                <artifactId>spring-ai-autoconfigure-model-oracle</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.oracle.spring.ai</groupId>
                <artifactId>spring-ai-starter-model-oracle</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
        <repository>
            <id>${repository.id}</id>
            <name>${repository.name}</name>
            <url>${repository.url}</url>
        </repository>
        <snapshotRepository>
            <id>${repository.id}</id>
            <name>${repository.name}</name>
            <url>${repository.url}</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
            <version>${spotbugs-annotations.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.cyclonedx</groupId>
                <artifactId>cyclonedx-maven-plugin</artifactId>
                <version>${cyclonedx.version}</version>
                <configuration>
                    <outputFormat>json</outputFormat>
                    <outputReactorProjects>true</outputReactorProjects>
                </configuration>
                <executions>
                    <execution>
                        <id>make-aggregate-bom</id>
                        <phase>package</phase>
                        <goals><goal>makeAggregateBom</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>spotbugs</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs-maven-plugin</artifactId>
                        <version>${spotbugs-maven-plugin.version}</version>
                        <configuration>
                            <failOnError>false</failOnError>
                            <htmlOutput>true</htmlOutput>
                            <plugins>
                                <plugin>
                                    <groupId>com.h3xstream.findsecbugs</groupId>
                                    <artifactId>findsecbugs-plugin</artifactId>
                                    <version>${findsecbugs-plugin.version}</version>
                                </plugin>
                            </plugins>
                        </configuration>
                        <executions>
                            <execution>
                                <id>spotbugs-check</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
